before stripe setup

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -14,6 +14,11 @@
  min-width: 100px;
  background-color: #fff;
  z-index: 1;
+  /* transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12),
+  .3s box-shadow,
+  .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12); */
+ transition: 0.5s ease;
+ cursor: pointer;
 
 
 }
@@ -24,6 +29,7 @@
 
 .product > img{
   max-height: 200px;
+  height: 100%;
   width: 100%;
   object-fit: contain;
   margin-bottom: 15px;
@@ -45,3 +51,16 @@
   height: 100px;
   margin-bottom: 15px;
 }
+
+.product:hover{
+  /* transform: scale(1.02);
+  box-shadow: 3px 3px 15px rgba(0,0,0,0.6);
+  margin: 5px; */
+   transform: scale(1.05);
+   box-shadow: 0 10px 20px rgba(0, 0, 0, .12),
+   0 4px 8px rgba(0, 0, 0, .06);
+   }
+
+  
+
+
