--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,5 @@
+@import "react-slideshow-image/dist/styles.css";
+
 .home {
   display: flex;
   justify-content: center;
@@ -6,7 +8,7 @@
   max-width: 1500px;
 }
 
-.home__row{
+.home__row {
   display: flex;
   z-index: 1;
   margin-left: 5px;
@@ -14,9 +16,10 @@
 }
 
 
-.home__image{
+.home__image {
+  
   width: 100%;
   z-index: -1;
   margin-bottom: -150px;
-  mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
